WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
29941
REGRESSION (
r48882
-
r48888
): Many memory leaks on SnowLeopard leaks bot
https://bugs.webkit.org/show_bug.cgi?id=29941
Summary
REGRESSION (r48882-r48888): Many memory leaks on SnowLeopard leaks bot
Mark Rowe (bdash)
Reported
2009-09-30 16:33:15 PDT
See <
http://build.webkit.org/results/SnowLeopard%20Intel%20Leaks/r48950%20(1060)/
>. The two likely changes in this range are <
http://trac.webkit.org/changeset/48883
> and <
http://trac.webkit.org/changeset/48884
>.
Attachments
Add attachment
proposed patch, testcase, etc.
Geoffrey Garen
Comment 1
2009-09-30 17:40:25 PDT
Committed revision 48952.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug