Fixed https://bugs.webkit.org/show_bug.cgi?id=29941 REGRESSION (r48882-r48888): Many memory leaks on SnowLeopard leaks bot

Patch by Geoffrey Garen <ggaren@apple.com> on 2009-09-30
Reviewed by Mark Rowe.

Forgot to implement a destructor for JSDOMWindowBaseData, so it was
leaking its RefPtr data member.

* bindings/js/JSDOMWindowBase.cpp:
(WebCore::JSDOMWindowBase::destroyJSDOMWindowBaseData):
* bindings/js/JSDOMWindowBase.h:
(WebCore::JSDOMWindowBase::JSDOMWindowBaseData::JSDOMWindowBaseData::JSDOMWindowBaseData):



Canonical link: https://commits.webkit.org/40511@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@48952 268f45cc-cd09-0410-ab3c-d52691b4dbfc